--- a/jobs/read-payload-111011/gtest/Makefile
+++ b/jobs/read-payload-111011/gtest/Makefile
@@ -1,6 +1,7 @@
 # A sample Makefile for building Google Test and using it in user
 # tests.  Please tweak it to suit your environment and project.  You
-# may want to move it to your project's root directory.  #
+# may want to move it to your project's root directory.
+#
 # SYNOPSIS:
 #
 #   make [all]  - makes everything.
@@ -11,21 +12,15 @@
 # project, except GTEST_HEADERS, which you can use in your own targets
 # but shouldn't modify.
 
-# Where to find user code.
-PROJECT_DIR = ../../../..
-USER_DIR = ../
-SHAKES_DIR = $(PROJECT_DIR)/space-lib/shakespeare
-UTLS_DIR = $(PROJECT_DIR)/space-lib/utls/
-GLOBAL_INC_DIR = $(PROJECT_DIR)/space-lib/include/
-INCPATH=-I../inc/  -I$(SHAKES_DIR)/inc/ -I$(GLOBAL_INC_DIR) -I$(UTLS_DIR)/include
-
-LIBPATH=-L$(UTLS_DIR)/lib
-
-LIBS=$(LIBPATH) -lcs1_utls -lrt
-
 # Points to the root of Google Test, relative to where this file is.
 # Remember to tweak this if you move this file.
-GTEST_DIR = $(PROJECT_DIR)/gtest-1.7.0
+GTEST_DIR = ../../../gtest-1.7.0
+
+# Where to find user code.
+USER_DIR = ../
+SHAKES_DIR = ../../../space-lib/shakespeare
+GLOBAL_INC_DIR = ../../../space-lib/include/
+INCPATH=-I../inc/ -I$(SHAKES_DIR)/inc/
 
 # Flags passed to the preprocessor.
 # Set Google Test's header directory as a system directory, such that
@@ -37,7 +32,7 @@ CXXFLAGS += -g -Wall -Wextra -pthread
 
 # All tests produced by this Makefile.  Remember to add new tests you
 # created to the list.
-TESTS = job-template_test
+TESTS = read-payload-111011_test
 
 # All Google Test headers.  Usually you shouldn't change this
 # definition.
@@ -77,14 +72,14 @@ gtest_main.a : gtest-all.o gtest_main.o
 
 ###########################
 
-job-template.o : $(USER_DIR)/src/job-template.cpp $(SHAKES_DIR)/inc/shakespeare.h $(GTEST_HEADERS)
-	$(CXX) $(CPPFLAGS) $(INCPATH) $(CXXFLAGS) -c $(USER_DIR)/src/job-template.cpp
+read-payload-111011.o : $(USER_DIR)/src/read-payload-111011.cpp $(SHAKES_DIR)/inc/shakespeare.h $(GTEST_HEADERS)
+	$(CXX) $(CPPFLAGS) $(INCPATH) $(CXXFLAGS) -c $(USER_DIR)/src/read-payload-111011.cpp
 
 shakespeare.o : $(SHAKES_DIR)/src/shakespeare.cpp $(SHAKES_DIR)/inc/shakespeare.h $(GTEST_HEADERS)
 	$(CXX) $(CPPFLAGS) $(INCPATH) $(CXXFLAGS) -c $(SHAKES_DIR)/src/shakespeare.cpp 
 
-job-template_test : job-template.o shakespeare.o gtest_main.a
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@ $(LIBS)
+read-payload-111011_test : read-payload-111011.o shakespeare.o gtest_main.a
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@ -lrt
 
-job-template_test.o : job-template_test.cpp $(GTEST_HEADERS)
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c job-template_test.cpp
+read-payload-111011_test.o : read-payload-111011_test.cpp $(GTEST_HEADERS)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c read-payload-111011_test.cpp
